src/objects/Apttus_Config2__BillingPlan__c.object
<CustomObject>
    <description>Represents a billing plan associated with a product or service</description>
    <fields>
        <fullName>Apttus_Billing__ProductConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated Product Configuration</description>
        <inlineHelpText>ID of the associated Product Configuration</inlineHelpText>
        <label>Product Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Billing Plans</relationshipLabel>
        <relationshipName>BillingPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement</description>
        <inlineHelpText>ID of the associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Billing Plans</relationshipLabel>
        <relationshipName>BillingPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingEndDate__c</fullName>
        <description>The billing end date</description>
        <inlineHelpText>The billing end date</inlineHelpText>
        <label>Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingMethod__c</fullName>
        <description>The billing method</description>
        <inlineHelpText>The billing method</inlineHelpText>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Split Evenly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPlanTemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select a Billing Plan Template to auto fill Billing Plan settings.</description>
        <inlineHelpText>Select a Billing Plan Template to auto fill Billing Plan settings.</inlineHelpText>
        <label>Billing Plan Template</label>
        <referenceTo>Apttus_Config2__BillingPlanTemplate__c</referenceTo>
        <relationshipLabel>Billing Plans</relationshipLabel>
        <relationshipName>BillingPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingStartDate__c</fullName>
        <description>The billing start date</description>
        <inlineHelpText>The billing start date</inlineHelpText>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The plan description</description>
        <inlineHelpText>The plan description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumOfInstallments__c</fullName>
        <description>The number of installments</description>
        <inlineHelpText>The number of installments</inlineHelpText>
        <label>Number of Installments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated order</description>
        <inlineHelpText>ID of the associated order</inlineHelpText>
        <label>Order</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>Billing Plans</relationshipLabel>
        <relationshipName>BillingPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PlanType__c</fullName>
        <description>The billing plan type</description>
        <inlineHelpText>The billing plan type</inlineHelpText>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                    <label>Fixed</label>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The plan status</description>
        <inlineHelpText>The plan status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <inlineHelpText>ID of the associated quote/proposal</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Billing Plans</relationshipLabel>
        <relationshipName>BillingPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>